# epiweeks

./: .coveragerc  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: checks.yml  draft.yml
docs/: api.md  background.md  conf.py  index.md  index.rst  manpage.md  robots.txt  usage.md
docs/_ext/: custom_manpage.py  custom_sitemap.py
src/: epiweeks.py
src/epiweeks/: __init__.py
tests/integration/: test_reference.py  test_reference_weeks.py
tests/integration/fixtures/: cdc_weeks.json  iso_weeks.json
tests/other/: test_reference.py
tests/unit/: test_epiweeks.py
