[metadata]
name = epiweeks
version = attr: epiweeks.__version__
author = Mohd Alshehri
author_email =
description = Epidemiological weeks calculation based on the US CDC (MMWR) and ISO week numbering systems
long_description = file: README.md
long_description_content_type = text/markdown
keywords = epidemiology, weeks, cdc, mmwr, iso, calendar, surveillance, public-health
license = MIT
license_files = LICENSE
url = https://github.com/dralshehri/epiweeks
project_urls =
    Documentation = https://epiweeks.readthedocs.io
    Source Code = https://github.com/dralshehri/epiweeks
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Utilities
    Typing :: Typed

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.6
zip_safe = False

[options.packages.find]
where = src

[flake8]
max-line-length = 88
extend-ignore = E203
